--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <title>Ashok Dey's Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta content="Personal Website of Ashok Dey" name="description">
+  <meta content="Online Resume of Ashok Dey" name="description">
   <meta content="Ashok Dey" name="author">
   <meta content=
-  "ashok-dey,computer-science-engineering,student,btech,greater-noida, noida, new-delhi, ncr,accutate- institute-management-technology,web-developer,web-designer,robotics,undergraduate"
+  "ashok, ashok-dey, resume, online-resume,computer-science-engineering,student,btech,greater-noida, noida, new-delhi, ncr,accurate- institute-management-technology,web-developer,web-designer,undergraduate"
   name="keywords">
   <!--META ENDING-->
 
@@ -125,14 +125,15 @@
                                       <span class="card-title myLight">JustShout : Keep Shouting</span>
                                       <p>
                                           A simple chat application just in 35 lines.
-                                          No login required and anyone can join the chat. The chats are stored and fetched from database. Lots of features are to be added like jQuery, Ajax and Responsiveness<br>
+                                          No login required and anyone can join the chat. The chats are stored and fetched from database. It's responsive, uses Ajax and The brand new Material Design<br>
                                           <span class="myBold myHighlight">
                                               Tech stack: HTML5, CSS3, PHP, MySQL
                                           </span>
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="http://www.ashokdey.in/projects/justshout/" target="_blank">Check the Shoughts !</a>
+                                      <a href="http://www.ashokdey.in/projects/justshout2/" target="_blank">Check the Shoughts !</a>
+                                      <a href="http://www.ashokdey.in/justshout" target="_blank">Older Version</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
@@ -332,7 +333,7 @@
                                       </span>
                                     </p>
                                     <span class="myLight">
-                                        i have worked on the following Opearting Systems :
+                                        I have worked in the following Opearting Systems :
                                     </span>
                                     <p>
                                         <span class ="myBold myHighlight-4">
@@ -409,6 +410,11 @@
                     </a>
                 </li>
               </ul>
+            </div>
+            <div class="card-pannel blue-text text-darken-4">
+                <p>
+                    Copyright (c) 2016 All Rights Reserved. Made with lots of <i class="fa fa-heart red-text"></i> , <i class="fa fa-html5 green-text text-darken-4"></i> and <i class="fa fa-css3 brown-text text-darken-4"></i>.
+                </p>
             </div>
 
         </footer>
