--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                                   </span>
                                   <p>
                                       <span class ="myBold myHighlight-4">
-                                          Adobe Photoshop, VisualStudio,
-                                          CodeBlocks, SublieText, Atom,
+                                          Adobe Photoshop, VisualStudio 2013,
+                                          CodeBlocks, Sublime-Text, Atom,
                                           VS Code, PowerShell, GCC.
                                       </span>
                                  </p>
@@ -329,7 +329,7 @@
                                   <p>
                                       <span class ="myBold myHighlight-4">
                                           Bootstrap 3, Foundation 5, Materialize CSS,
-                                          NodeJS, Flask, jQuery
+                                          NodeJS, Flask, jQuery, Electron
                                       </span>
                                     </p>
                                     <span class="myLight">
