--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 </span>
                             </div>
                             <div class="collapsible-body">
-                                <div class="card myCard yellow">
+                                <div class="card myCard purple darken-3">
                                     <div class="card-content white-text">
                                       <span class="card-title">Lets Help Each Other</span>
                                       <p>
