--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                     </span>
                                     <p>
                                         <span class ="myBold myHighlight-4">
-                                            Windows XP and above  &amp; Ubuntu 12.10 and above
+                                            Windows XP &amp; above, Ubuntu 12.10 &amp; above
                                         </span>
                                       </p>
                                 </div>
