--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         </article><!-- Interests Row-->
         <footer>
             <!--Social Links FAB-->
-            <div class="fixed-action-btn horizontal" style="bottom: 45px; right: 24px;">
+            <div class="fixed-action-btn verical" style="bottom: 45px; right: 24px;">
               <a class="btn-floating btn-large blue darken-4">
                 <i class="large material-icons">call</i>
               </a>
