--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="http://www.intek.ashokdey.in/" target="_blank">Have a Look</a>
+                                      <a href="http://intek.ashokdey.in/" target="_blank">Have a Look</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
