addded link to the project Qurious

--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <p>
-                                          This project has not be published yet!
-                                      </p>
+                                      <a href="http://www.qurious.xyz" target="_blank">Visit The Site Now !</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
