--- a/play-js/index.html
+++ b/play-js/index.html
@@ -15,7 +15,7 @@
     <canvas id="myCanvas" width="500px" height="300px" style="border: 2px solid #000">
     </canvas>
     <br><br><br>
-    <button type="button" id="move-btn">Move Right</button>
+    <button type="button" id="move-btn" style="width:100px; height:30px">Move Right</button>
     <script>
         var canvas = document.getElementById('myCanvas');
         var pen = canvas.getContext('2d');
