--- a/index.html
+++ b/index.html
@@ -371,9 +371,15 @@
             </article> <!--Interest Col Ends -->
         </article><!-- Interests Row-->
         <footer>
+            <!--Download Resume FAB-->
+            <a class="btn-floating btn-large waves-effect waves-light red" style="bottom: 45px; right: 24px;"
+               href="https://goo.gl/2ynXhW" target="_blank">
+              <i class="material-icons">description</i>
+            </a>
+          
             <!--Social Links FAB-->
-            <div class="fixed-action-btn verical" style="bottom: 45px; right: 24px;">
-              <a class="btn-floating btn-large blue darken-4">
+            <div class="fixed-action-btn verical" style="bottom: 45px; left: 24px;">
+              <a class="btn-floating btn-large waves-effect waves-light red">
                 <i class="large material-icons">call</i>
               </a>
               <ul>
