--- a/index.html
+++ b/index.html
@@ -372,10 +372,12 @@
         </article><!-- Interests Row-->
         <footer>
             <!--Download Resume FAB-->
-            <a class="btn-floating btn-large waves-effect waves-light red" style="position:fixed bottom: 45px; right: 24px;"
-               href="https://goo.gl/2ynXhW" target="_blank">
-              <i class="material-icons">description</i>
-            </a>
+            <div class="fixed-action-btn verical" style="bottom: 45px; right:24px; width:50px">
+              <a class="btn-floating btn-large waves-effect waves-light red"
+                 href="https://goo.gl/2ynXhW" target="_blank">
+                <i class="material-icons">description</i>
+              </a>
+            </div>
           
             <!--Social Links FAB-->
             <div class="fixed-action-btn verical" style="bottom: 45px; left: 24px; width:50px">
