updated link to resume

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <!--Download Resume FAB-->
             <div class="fixed-action-btn verical" style="bottom: 45px; right:24px; width:50px">
               <a class="btn-floating btn-large waves-effect waves-light red"
-                 href="https://goo.gl/2ynXhW" target="_blank">
+                 href="https://goo.gl/6lRcVV" target="_blank">
                 <i class="material-icons">description</i>
               </a>
             </div>
