--- a/projects/weather-app/index.html
+++ b/projects/weather-app/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-<head><title>WeatherApp</title>
+<head>
+	<title>WeatherApp</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="main.css">
   	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Arima+Madurai:400,700,800" rel="stylesheet">  
