--- a/projects/weather-app/index.html
+++ b/projects/weather-app/index.html
@@ -13,8 +13,11 @@
 <div class="main">
 	<div id="search">
 	<h1>Weather Anytime </h1><br>
-		<p class="help">Enter your city, address or zip code..Hit ENTER!</p>	
-		<input type="text" id="input-box">
+		<p class="help">Enter your city, address or zip code and hit ENTER!</p>
+		<p class="hint">
+			(Allow location access and get weather of your location without typing)
+		</p>	
+		<input type="text" id="input-box" autofocus>
 		<a href="#" id="search-btn" type="submit">GO</a>
 	</div>
 
