added loading gif

--- a/projects/weather-app/index.html
+++ b/projects/weather-app/index.html
@@ -7,7 +7,7 @@
   	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Arima+Madurai:400,700,800" rel="stylesheet">  
   	<link rel="icon" href="favicon.ico">
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
 <div class="main">
@@ -20,7 +20,7 @@
 		<input type="text" id="input-box" autofocus>
 		<a href="#" id="search-btn" type="submit">GO</a>
 	</div>
-
+	<img src="images/loader.gif" alt="loading" id = "img-tag">
 	<div id="load">
 	<div id="weather-box">
 		<h3 id="city-name">City name</h3>
