--- a/projects/quick-td/index.html
+++ b/projects/quick-td/index.html
@@ -1,3 +1,12 @@
+<!--
+--------------------------
+Welcome geek, why you are viewing the console. Fork it from github. :)
+--------------------------
+Also try to make the "Edit Button" work.
+Thanks
+===================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
