--- a/projects/weather-app/index.html
+++ b/projects/weather-app/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>WeatherApp</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="css/main.css">
   	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Arima+Madurai:400,700,800" rel="stylesheet">  
   	<link rel="icon" href="favicon.ico">
@@ -13,7 +13,7 @@
 <div class="main">
 	<div id="search">
 	<h1>Weather Anytime </h1><br>
-		<p class="help">Enter your city, address or zip code and hit ENTER!</p>
+		<p class="help">Enter your <span id="help"></span></p>
 		<img src="images/loader.gif" alt="loading" id = "img-tag">
 		<p class="hint">
 			(Allow location access and get weather of your location without typing)
@@ -33,7 +33,16 @@
 	<footer>
 		<a href="https://darksky.net/poweredby/">Powered by Dark Sky</a>
 	</footer>
-	<script src="app.js"></script>
-
+	<script src="js/app.js"></script>
+	<script src="js/typed.js"></script>
+	<script>
+		$(function(){
+			$("#help").typed({
+				strings: ['city,', 'address',  'or zip code', 'and hit ENTER!'],
+				typeSpeed: 0,
+				loop : true
+			});
+		});
+	</script>
 </body>
 </html>
