--- a/projects/weather-app/index.html
+++ b/projects/weather-app/index.html
@@ -38,7 +38,7 @@
 	<script>
 		$(function(){
 			$("#help").typed({
-				strings: ['CITY,', 'ADDRESS',  'or ZIP CODE', 'and hit ENTER!'],
+				strings: ['CITY,', 'or ADDRESS',  'or ZIP CODE', 'and hit ENTER!'],
 				typeSpeed: 0,
 				loop : true
 			});
