--- a/projects/weather-app/index.html
+++ b/projects/weather-app/index.html
@@ -28,6 +28,7 @@
         <div id="realTemp">Temperature</div>
         <div id="feelsLike">Temperature</div>
 		<div id="humidity">Humidity</div>
+		<div id="windSpeed">Humidity</div>
 		<div id="summary">Weather Description</div>
 	</div>
 	<br>
