initial commit on new branch

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                 <h5 class="blue darken-4 grey-text text-lighten-5 z-depth-2">Projects</h5>
                 <section class="col s12">
                     <ul class="collapsible popout">
-                        <li> <!-- Project 1 -->
+                        <!-- Project 1 -->
+                        <li> 
                             <div class="collapsible-header"><i class="fa fa-cubes orange-text text-darken-4"></i>
                                 <span class="myBold purple-text text-darken-4">
                                     Qurious
