added project todo rest api

--- a/index.html
+++ b/index.html
@@ -90,6 +90,30 @@
                     <ul class="collapsible popout">
                         <!-- Project 1 -->
                         <li> 
+                            <div class="collapsible-header"><i class="fa fa-dot-circle-o blue-grey-text text-darken-4"></i>
+                                <span class="myBold blue-grey-text text-darken-4">
+                                    Todo RESTful API
+                                </span>
+                            </div>
+                            <div class="collapsible-body">
+                                <div class="card myCard blue-grey darken-3">
+                                    <div class="card-content white-text">
+                                      <span class="card-title">RESTful API to manage Todos</span>
+                                      <p>
+                                          This API manages Todos and Users. It facilitates registering a user, logging in and create, update and delete todos<br><br>  
+                                          <span class="myBold myHighlight">
+                                              Tech Stack: NodeJS, ExpressJS, MongoDB, Mocha
+                                          </span>
+                                      </p>
+                                    </div>
+                                    <div class="card-action">
+                                      <a href="ad-todo-api.herokuapp.com" target="_blank">Visit The Site Now !</a>
+                                    </div>
+                                </div> <!--End of Card -->
+                            </div>
+                        </li>
+                        <!-- Project 1 -->
+                        <li> 
                             <div class="collapsible-header"><i class="fa fa-cubes orange-text text-darken-4"></i>
                                 <span class="myBold purple-text text-darken-4">
                                     Qurious
@@ -239,7 +263,7 @@
                                     </span>
                                     <p>
                                         <span class ="myBold myHighlight-4">
-                                            HTML5, CSS3 &amp; JavaScript
+                                            HTML5, CSS3, JavaScript, TypeScript, jQuery, NodeJS, MongoDB, Angular 2
                                         </span>
                                    </p>
                                 </div> <!-- END card Content-->
@@ -282,8 +306,8 @@
                                   </span>
                                   <p>
                                       <span class ="myBold myHighlight-4">
-                                          Adobe Photoshop, VisualStudio 2013,
-                                          CodeBlocks, Sublime-Text, Atom,
+                                          Adobe Photoshop, Visual Studi,
+                                          CodeBlocks, Sublime Text, Atom,
                                           VS Code, PowerShell, GCC.
                                       </span>
                                  </p>
@@ -328,7 +352,7 @@
                                   <p>
                                       <span class ="myBold myHighlight-4">
                                           Bootstrap 3, Foundation 5, Materialize CSS,
-                                          NodeJS, Flask, jQuery, Electron
+                                          NodeJS, jQuery, Electron, Mocha, Socket IO, ExpressJS
                                       </span>
                                     </p>
                                     <span class="myLight">
