added SDL project

--- a/index.html
+++ b/index.html
@@ -112,6 +112,31 @@
                                 </div> <!--End of Card -->
                             </div>
                         </li>
+                        <!-- Project 2 -->
+                        <li> 
+                            <div class="collapsible-header"><i class="fa fa-desktop light-blue-text text-darken-3"></i>
+                                <span class="myBold light-blue-text text-darken-3">
+                                    Pixel Explosion in C++ and SDL2
+                                </span>
+                            </div>
+                            <div class="collapsible-body">
+                                <div class="card myCard light-blue lighten-1">
+                                    <div class="card-content white-text">
+                                      <span class="card-title">Pixel Simulation Using in C++</span>
+                                      <p>
+                                          C++ application that draws patterns with pixels. It uses an external library SDL2 that facilitates graphical programming and event trapping using C/C++<br><br>  
+                                          <span class="myBold myHighlight">
+                                              Tech Stack: C++ and SDL2
+                                          </span>
+                                      </p>
+                                    </div>
+                                    <div class="card-action">
+                                      <a href="https://github.com/ashokdey/Pixel_Explosion" target="_blank">Visit The Repository Now !</a>
+                                    </div>
+                                </div> <!--End of Card -->
+                            </div>
+                        </li>
+                        
                         <!-- Project 1 -->
                         <li> 
                             <div class="collapsible-header"><i class="fa fa-cubes orange-text text-darken-4"></i>
