added weather app

--- a/index.html
+++ b/index.html
@@ -136,11 +136,34 @@
                                 </div> <!--End of Card -->
                             </div>
                         </li>
-                        
+                        <!-- Project 3 -->
+                        <li> 
+                            <div class="collapsible-header"><i class="fa fa-tint indigo-text text-darken-3"></i>
+                                <span class="myBold indigo-text text-darken-3">
+                                    Weather Anytime
+                                </span>
+                            </div>
+                            <div class="collapsible-body">
+                                <div class="card myCard indigo lighten-1">
+                                    <div class="card-content white-text">
+                                      <span class="card-title">Weather Information in Browser</span>
+                                      <p>
+                                          A weather app that can track your location and give the weather condition of your location. Moreover you can even search for weather of different places using zip code, state, city or any address.<br><br>  
+                                          <span class="myBold myHighlight">
+                                              Tech Stack: HTML5 Geolocation API, DarkSkyAPI, jQuery, JS, HTML5, Ajax
+                                          </span>
+                                      </p>
+                                    </div>
+                                    <div class="card-action">
+                                      <a href="https://ashokdey.github.io/projects/weather-app/" target="_blank">Visit The Repository Now !</a>
+                                    </div>
+                                </div> <!--End of Card -->
+                            </div>
+                        </li>
                         <!-- Project 1 -->
                         <li> 
                             <div class="collapsible-header"><i class="fa fa-cubes orange-text text-darken-4"></i>
-                                <span class="myBold purple-text text-darken-4">
+                                <span class="myBold cyan-text text-darken-4">
                                     Qurious
                                 </span>
                             </div>
