--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                                   </span>
                                   <p>
                                       <span class ="myBold myHighlight-4">
-                                          Adobe Photoshop, Visual Studi,
+                                          Adobe Photoshop, Visual Studio,
                                           CodeBlocks, Sublime Text, Atom,
                                           VS Code, PowerShell, GCC.
                                       </span>
