--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="ad-todo-api.herokuapp.com" target="_blank">Visit The Site Now !</a>
+                                      <a href="https://ad-todo-api.herokuapp.com" target="_blank">Visit The Site Now !</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
