--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 <p>
                                     Accurate Institute of Management &amp; Technology<br>
                                     Expected : June 2016<br>
-                                    Percentile : 65%<br>
+                                    GPA : 7.1<br>
                                     Greater Noida, UP 201306
                                 </p>
                             </div>
@@ -155,7 +155,7 @@
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="https://ashokdey.github.io/projects/weather-app/" target="_blank">Visit The Repository Now !</a>
+                                      <a href="https://ashokdey.github.io/projects/weather-app/" target="_blank">Use the App Now !</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
@@ -204,7 +204,7 @@
                                     </div>
                                     <div class="card-action">
                                       <a href="http://www.ashokdey.in/projects/justshout2/" target="_blank">Check the Shoughts !</a>
-                                      <a href="http://www.ashokdey.in/justshout" target="_blank">Older Version</a>
+                                      <a href="http://www.ashokdey.in/projects/justshout" target="_blank">Older Version</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
