--- a/projects/to-do-angular/index.html
+++ b/projects/to-do-angular/index.html
@@ -12,7 +12,8 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="page-header text-center">
                     <h1>
-                        <span ng-if="todo.user">{{todo.user + '\'s'}}</span> To Do List
+                        <!--<span ng-if="todo.user">{{todo.user + '\'s'}}</span> -->
+                        My ToDo List
                         &nbsp;&nbsp;&nbsp;&nbsp;
                         <span class="label" ng-class="warningLevel()" ng-hide="incompleteCount() == 0">
                             {{incompleteCount()}}
