--- a/projects/to-do-angular/index.html
+++ b/projects/to-do-angular/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="todoApp">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->    
     <meta charset="UTF-8">
-    <title>To-Dos AngularJS</title>
+    <title>To-Dos Basic</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <script src="angular.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->    
 </head>
 <body ng-controller="todoController">
     <div class="container">
