--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                       <p>This is a collection of the website designs I have made as a hobby using Adobe Photoshop CS 6 and Adobe Photoshop CC. The graphics and toons used are borrowed from the internet freebies</p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="https://goo.gl/9CujVN" target= "_blank">View the Collection</a>
+                                      <a href="https://drive.google.com/open?id=0Byqg5mck_vdLRWZnU3VLdWtpWUU" target= "_blank">View the Collection</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
@@ -447,7 +447,7 @@
             <!--Download Resume FAB-->
             <div class="fixed-action-btn verical" style="bottom: 45px; right:24px; width:50px">
               <a class="btn-floating btn-large waves-effect waves-light red"
-                 href="https://drive.google.com/file/d/0Byqg5mck_vdLbkl0eXJJbTZHaEU/view?usp=sharing" target="_blank">
+                 href="https://drive.google.com/file/d/0Byqg5mck_vdLdVh4alZSWkJVNmM/view" target="_blank">
                 <i class="material-icons">description</i>
               </a>
             </div>
