--- a/projects/classifieds/index.html
+++ b/projects/classifieds/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="classified">
+<html lang="en" ng-app="classified" ng-cloak>
 <head>
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
     <title>-Angular Classified-</title>
     <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
     <link rel="stylesheet" href="node_modules/mdi/css/materialdesignicons.min.css" media="all">
