Added new project

--- a/index.html
+++ b/index.html
@@ -88,6 +88,30 @@
                 <h5 class="blue darken-4 grey-text text-lighten-5 z-depth-2">Projects</h5>
                 <section class="col s12">
                     <ul class="collapsible popout">
+                        <!-- Project 0 -->
+                        <li> 
+                            <div class="collapsible-header"><i class="fa fa-dot-circle-o blue-grey-text text-darken-4"></i>
+                                <span class="myBold blue-grey-text text-darken-4">
+                                    Send OTP/Messages to Contacts  
+                                </span>
+                            </div>
+                            <div class="collapsible-body">
+                                <div class="card myCard blue-grey darken-3">
+                                    <div class="card-content white-text">
+                                      <span class="card-title">Application to Send SMS</span>
+                                      <p>
+                                          This applicattion uses the Twilio API to send Randonly generated 6-digit OTP/ Custom Messages to Saved contacts<br><br>  
+                                          <span class="myBold myHighlight">
+                                              Tech Stack: NodeJS, ExpressJS, EJS, Bootstrap, MongoDB, Mocha, Supertest
+                                          </span>
+                                      </p>
+                                    </div>
+                                    <div class="card-action">
+                                      <a href="https://send-otp.herokuapp.com/" target="_blank">Use the APP Now!</a>
+                                    </div>
+                                </div> <!--End of Card -->
+                            </div>
+                        </li>
                         <!-- Project 1 -->
                         <li> 
                             <div class="collapsible-header"><i class="fa fa-dot-circle-o blue-grey-text text-darken-4"></i>
@@ -107,7 +131,7 @@
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="https://ad-todo-api.herokuapp.com" target="_blank">Visit The Site Now !</a>
+                                      <a href="https://ad-todo-api.herokuapp.com" target="_blank">Visit The API Site Now !</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
