changed style for Project 0

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
                     <ul class="collapsible popout">
                         <!-- Project 0 -->
                         <li> 
-                            <div class="collapsible-header"><i class="fa fa-dot-circle-o blue-grey-text text-darken-4"></i>
-                                <span class="myBold blue-grey-text text-darken-4">
+                            <div class="collapsible-header"><i class="fa fa-envelope-square blue-grey-text text-darken-4"></i>
+                                <span class="myBold cyan-text text-darken-4">
                                     Send OTP/Messages to Contacts  
                                 </span>
                             </div>
                             <div class="collapsible-body">
-                                <div class="card myCard blue-grey darken-3">
+                                <div class="card myCard blue darken-3">
                                     <div class="card-content white-text">
                                       <span class="card-title">Application to Send SMS</span>
                                       <p>
@@ -131,7 +131,7 @@
                                       </p>
                                     </div>
                                     <div class="card-action">
-                                      <a href="https://ad-todo-api.herokuapp.com" target="_blank">Visit The API Site Now !</a>
+                                      <a href="https://ad-todo-api.herokuapp.com" target="_blank">Use The API Now !</a>
                                     </div>
                                 </div> <!--End of Card -->
                             </div>
