--- a/projects/react-pwa/index.html
+++ b/projects/react-pwa/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="manifest.json"><link rel="shortcut icon" href="icon.ico"><link rel="stylesheet" href="fonts/icons.css"><title>ProductHunt - ReactPWA</title><link href="static/css/main.e9e7ff41.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="static/js/main.e3afc314.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><link rel="stylesheet" href="/fonts/icons.css"><script>if('serviceWorker' in navigator) {
+        navigator.serviceWorker.register(`/sw.js`).then((register) => {
+          console.log('worked', register);
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }).catch((err) => {
+          console.log('Error', err);
+        });
+      }
+      else {
+        console.log('No support for SW');
+      }</script><title>ProductHunt - ReactPWA</title><link href="/static/css/main.e9e7ff41.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.d2edd69f.js"></script></body></html>
