--- a/projects/react-pwa/index.html
+++ b/projects/react-pwa/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><link rel="stylesheet" href="/fonts/icons.css"><script>if('serviceWorker' in navigator) {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/icon.ico"><link rel="stylesheet" href="/fonts/icons.css"><script>if('serviceWorker' in navigator) {
         navigator.serviceWorker.register(`/sw.js`).then((register) => {
           console.log('worked', register);
           console.log('ServiceWorker registration successful with scope: ', registration.scope);
@@ -8,4 +8,4 @@
       }
       else {
         console.log('No support for SW');
-      }</script><title>ProductHunt - ReactPWA</title><link href="/static/css/main.e9e7ff41.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.d2edd69f.js"></script></body></html>
+      }</script><title>ReactPWA</title><link href="/static/css/main.e9e7ff41.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.d73f8806.js"></script></body></html>
