--- a/projects/react-pwa/index.html
+++ b/projects/react-pwa/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#000000"><link rel="manifest" href="manifest.json"><link rel="shortcut icon" href="icon.ico"><link rel="stylesheet" href="fonts/icons.css"><script>if('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/sw.js').then((register) => {
-      console.log('worked', register);
-      console.log('ServiceWorker registration successful with scope: ', register.scope);
+    navigator.serviceWorker.register('/sw.js').then((registeration) => {
+      console.log('worked', registeration);
+      console.log('ServiceWorker registration successful with scope: ', registeration.scope);
     }).catch((err) => {
       console.log('Error', err);
     });
