--- a/projects/react-pwa/index.html
+++ b/projects/react-pwa/index.html
@@ -2,7 +2,7 @@
     if('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('./sw.js')
-            .then((registeration) => {
+            .then((registration) => {
               console.log('worked', registration);
               console.log('ServiceWorker registration successful with scope: ', registration.scope);
             }).catch((err) => {
