--- a/projects/weather5/index.html
+++ b/projects/weather5/index.html
@@ -15,6 +15,6 @@
     <hr>
   </div>
   <div id="app"></div>
-  <script src="/bundle.js"></script>
+  <script src="bundle.js"></script>
 </body>
 </html>
