--- a/projects/weather5/index.html
+++ b/projects/weather5/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_EQNTGZ_Wh-9FiI_rNsfQqShwytuBhwU"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_EQNTGZ_Wh-9FiI_rNsfQqShwytuBhwU&callback=initMap"
+  type="text/javascript"></script>
   <link rel="stylesheet" href="styles.css">
   <title>weather Forecast | React + Redux </title>
 </head>
