--- a/projects/react-pwa/index.html
+++ b/projects/react-pwa/index.html
@@ -7,7 +7,7 @@
     <script>
         (function(){
             if('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('./sw.js')
+                navigator.serviceWorker.register('/sw.js')
                     .then((register) => {
                     }).catch((err) => {
                         console.log('Error', err);
